--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
   <title>Hello</title>
 </head>
 <body>
-  <h1>Welcome to my webpage!</h1>
+  <h1 style = "color: pink; background-color:purple;">Welcome to my webpage!</h1>
   <h2> Hello </h2>
   Hello, World!
 </body>
